<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardview_dark_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/character_info_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_info_title"
            style="@style/detail_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/character_info_title"
            app:layout_constraintBottom_toBottomOf="@+id/character_info_icon"
            app:layout_constraintStart_toEndOf="@+id/character_info_icon"
            app:layout_constraintTop_toTopOf="@+id/character_info_icon" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_info_name"
            style="@style/view_holder_film_item_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/character_info_name"
            app:layout_constraintStart_toStartOf="@+id/character_info_icon"
            app:layout_constraintTop_toBottomOf="@+id/character_info_icon" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_info_height"
            style="@style/view_holder_film_item_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_info_height"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="@+id/character_info_icon"
            app:layout_constraintTop_toBottomOf="@+id/character_info_name" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_info_birthyear"
            style="@style/view_holder_film_item_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/character_info_birthyear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/character_info_icon"
            app:layout_constraintTop_toBottomOf="@+id/character_info_height" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>